--- a/todo/package.json
+++ b/todo/package.json
@@ -6,7 +6,10 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/react": "^16.9.34",
+    "@types/react-dom": "^16.9.6",
     "awesome-typescript-loader": "^5.2.1",
+    "eslint": "^6.8.0",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.28",
     "react": "^16.13.1",
@@ -15,8 +18,8 @@
     "react-scripts": "3.4.1",
     "source-map-loader": "^0.2.4",
     "styled-components": "^5.1.0",
-    "typescript": "^3.8.3",
-    "typescript-eslint": "0.0.1-alpha.0"
+    "typescript-eslint": "0.0.1-alpha.0",
+    "typescript-estree": "^18.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -40,6 +43,8 @@
     ]
   },
   "devDependencies": {
-    "@types/node": "^13.13.2"
+    "@types/node": "^13.13.2",
+    "@typescript-eslint/parser": "^2.29.0",
+    "typescript": "^3.8.3"
   }
 }
