--- a/todo/tsconfig.json
+++ b/todo/tsconfig.json
@@ -1,8 +1,11 @@
 {
     "compilerOptions": {
+        "jsx": "react",
         "outDir": "./dist",
         "allowJs": true,
-        "target": "es6"
+        "target": "es6",
+        "noImplicitAny": true,
+        "allowSyntheticDefaultImports": true,
     },
         "include": [
         "./src/**/*"
